--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <nav>
           <i class="fas fa-bars toggle-menu"></i>
           <ul>
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portofolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="contact#">Contact</a></li>
           </ul>
           <div class="form">
             <i class="fas fa-search"></i>
@@ -43,7 +43,7 @@
     </header>
     <!-- End Header -->
     <!-- Start Landing -->
-    <div class="landing">
+    <div class="landing" id="home">
       <div class="overlay"></div>
       <div class="text">
         <div class="content">
@@ -69,7 +69,7 @@
     </div>
     <!-- End Landing -->
     <!-- Start Services -->
-    <div class="services">
+    <div class="services" id="services>
       <div class="container">
         <div class="main-heading">
           <h2>Services</h2>
@@ -144,7 +144,7 @@
     </div>
     <!-- End Design -->
     <!-- Start Potfolio-->
-    <div class="portfolio">
+    <div class="portfolio" id="portofolio">
       <div class="container">
         <div class="main-heading">
           <h2>PORTFOLIO</h2>
@@ -235,7 +235,7 @@
     </div>
     <!-- End video -->
     <!-- Start About -->
-    <div class="about">
+    <div class="about" id="about">
       <div class="container">
         <div class="main-heading">
           <h2>ABOUT US</h2>
@@ -350,7 +350,7 @@
       </div>
     </div>
     <!-- End Qoute -->
-    <div class="pricing">
+    <div class="pricing" id="pricing">
       <div class="container">
         <div class="main-heading">
           <h2>PRICING</h2>
@@ -441,7 +441,7 @@
     </div>
     <!-- End Subscribe -->
     <!-- Start Contact Us -->
-    <div class="contact-us">
+    <div class="contact-us" id="contact">
       <div class="container">
         <div class="main-heading">
           <h2>CONTACT US</h2>
