--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <ul>
             <li><a class="active" href="#home">Home</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#portofolio">Portfolio</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#pricing">Pricing</a></li>
-            <li><a href="contact#">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
           <div class="form">
             <i class="fas fa-search"></i>
@@ -69,7 +69,7 @@
     </div>
     <!-- End Landing -->
     <!-- Start Services -->
-    <div class="services" id="services>
+    <div class="services" id="services">
       <div class="container">
         <div class="main-heading">
           <h2>Services</h2>
@@ -144,7 +144,7 @@
     </div>
     <!-- End Design -->
     <!-- Start Potfolio-->
-    <div class="portfolio" id="portofolio">
+    <div class="portfolio" id="portfolio">
       <div class="container">
         <div class="main-heading">
           <h2>PORTFOLIO</h2>
